# go-abacus

./: CONTRIBUTION.md  README.md  bun.lockb  eslint.config.js  package.json  prettier.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
public/docx/: example.docx
src/: App.tsx  app.css  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/generator/: def.rs  solution.rs
src/components/docx/: create-pages.ts
src/components/docx-multiplier/: create-pages.ts  spacer.ts
src/components/layout/: app-layout.tsx
src/components/main-page/: header.tsx  main-checkbox.tsx  main-option.tsx  page.tsx
src/components/shared/: button.tsx  main-checkbox.tsx
src/components/ui/: button.tsx  checkbox.tsx  header.tsx  input.tsx  main-checkbox.tsx  main-option.tsx  range-slider.tsx  select.tsx  shiny-text.tsx  tooltip.tsx
src/layout/: layout.tsx
src/pages/main/: body.tsx  header.tsx  index.tsx  main-checkbox.tsx  main-option.tsx  store.ts  type.ts
src/pages/multiply/: body.tsx  header.tsx  index.tsx  store.ts  type.ts
src/shared/: button.tsx
src/store/: option-store.ts  store.ts  type.ts
src/styles/: fonts.css  scrollbar.css
src/types/: schema.ts
src/util/: add-dot-separate.ts  cn.ts  docx.ts  explorer.ts  format-digit.ts  fs.ts
src/widget/: page-break.tsx  page-header.ts  solution-table-body.tsx  spacer.ts
src/widget/docx/: create-pages.ts
src/widget/main-page/: body.tsx  header.tsx  main-checkbox.tsx  main-option.tsx
(+29 files in other folders)
